--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -15,11 +15,10 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <modules></modules>
-
-    <properties></properties>
-
-    <dependencies></dependencies>
+    <modules>
+        <module>config-server</module>
+        <module>eureka</module>
+    </modules>
 
     <build>
         <plugins>
