--- a/business/employee/src/main/resources/bootstrap.yaml
+++ b/business/employee/src/main/resources/bootstrap.yaml
@@ -8,6 +8,15 @@ springdoc:
     path: /swagger/index.html
     enabled: true
 
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: ${EUREKA_SERVER:http://localhost:8761/eureka}
+
 spring:
   mvc:
     pathmatch:
@@ -19,3 +28,27 @@ spring:
     active: local
   config:
     import: optional:configserver:http://localhost:8085
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
+    shutdown:
+      enabled: true
+  info:
+    env:
+      enabled: true
+
+info:
+  app:
+    name: Employee Microservice
+    description: Application to create and get Employees
+    version: 1.0
+
+endpoint:
+  shutdown:
+    enabled: true
