Implementando estructura inicial v1.0

--- a/business/employee/src/main/resources/bootstrap.yaml
+++ b/business/employee/src/main/resources/bootstrap.yaml
@@ -52,3 +52,16 @@ info:
 endpoint:
   shutdown:
     enabled: true
+
+
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        registerHealthIndicator: true
+    instances:
+      getEmployeesCB:
+        minimumNumberOfCalls: 7
+        failureRateThreshold: 50
+        waitDurationInOpenState: 20000
+        permittedNumberOfCallsInHalfOpenState: 3
