--- a/infrastructure/config-server/src/main/resources/application.properties
+++ b/infrastructure/config-server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=8085
+server.port=8888
 spring.application.name=config-server
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
 
 
 #######git config server######
