--- a/infrastructure/eureka/src/main/resources/application.properties
+++ b/infrastructure/eureka/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.renewalPercentThreshold=0.85
+eureka.instance.lease-renewal-interval-in-seconds=10
+eureka.server.enable-self-preservation=true
+
+spring.cloud.config.enabled=false
