Se agregan credenciales estaticas

--- a/infrastructure/config-server/src/main/resources/application.properties
+++ b/infrastructure/config-server/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.profiles.active=git
 spring.cloud.config.server.git.uri=https://github.com/Technologyos/spring-config-credentials
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=main
+
+spring.security.user.name=admin
+spring.security.user.password=admin
