--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-PGS_USER=space
+JAVA_OPTS_CONFIG_SERVER=-Xms256M -Xmx256M -DEUREKA_SERVER=http://registry-discovery:8761/eureka/ -DLOCAL_REPOSITORY=/tmp/spring-config-credentials
+JAVA_OPTS_SERVICE=-Xms256M -Xmx256M -DEUREKA_SERVER=http://registry-discovery:8761/eureka/ -Dspring.profiles.active=local
+PGS_USER=technologyos
 PGS_PASSWORD=YXNhbGF6YXJqQGdtYWlsLmNvbToqR
-PGS_DB=spacedb
+PGS_DB=space_db
 PGA_EMAIL=technologyos@gmail.com
 PGA_PASSWORD=i1KYU5kUmdVa1hwMnI1d
