--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,14 @@
-# Top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
 end_of_line = lf
 insert_final_newline = true
+charset = utf-8
+trim_trailing_whitespace = true
 
 [*.java]
-charset = utf-8
 indent_style = space
 indent_size = 4
-trim_trailing_whitespace = true
-insert_final_newline = true
 
 [*.{xml,yml,yaml}]
 indent_style = space
@@ -20,13 +17,18 @@ indent_size = 2
 [*.md]
 trim_trailing_whitespace = false
 
-[**/target/**]
-exclude_patterns = .*
-
 [*.properties]
-indent_size = 2
 indent_style = space
+indent_size = 2
 
-[*.yml]
-indent_size = 2
+[*.json]
 indent_style = space
+indent_size = 2
+
+[*.test]
+indent_style = space
+indent_size = 4
+
+[*.sql]
+indent_style = space
+indent_size = 2
