feature: updating variables and docker compose structure

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ JAVA_OPTS_CONFIG_SERVER=-Xms256M -Xmx256M -DEUREKA_SERVER=http://registry-discov
 JAVA_OPTS_SERVICE=-Xms256M -Xmx256M -DEUREKA_SERVER=http://registry-discovery:8761/eureka/ -Dspring.profiles.active=local
 PGS_USER=technologyos
 PGS_PASSWORD=YXNhbGF6YXJqQGdtYWlsLmNvbToqR
-PGS_DB=space_db
+PGS_DB=cloud_db
 PGA_EMAIL=technologyos@gmail.com
 PGA_PASSWORD=i1KYU5kUmdVa1hwMnI1d
